--- a/css/index.css
+++ b/css/index.css
@@ -5,15 +5,16 @@ body {
     box-sizing: border-box;
 }
 
-header {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 0;
-    text-align: center;
+header, footer {
+    background-color:aqua;
+    color: black;
+    border: 1px solid;
+    padding:0;
 }
 
 nav {
-    background-color: rgb(12 79 145);
+    margin: 15px 0;
+    background-color: black;
     padding: 16px 0px;
 }
 
@@ -22,7 +23,6 @@ nav .nav {
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: center;
 }
 
 nav .nav li {
@@ -31,24 +31,27 @@ nav .nav li {
 
 nav .nav li a {
     text-decoration: none;
-    color: #000;
+    color: white;
     font-weight: bold;
 }
+.main_container{
+    width:80%;
+    margin: auto;
+}
 
-main {
+main  {
     display: flex;
 }
 
 .container {
-    width: 80%;
+    width: 90%;
     background-color: #f9f9f9;
     padding: 0 20px 0 20px;
 }
 
-.slide {
+.slide img {
     width: 100%;
     height: 300px;
-    background-color: #34495e;
     margin-bottom: 20px;
     display: flex;
     justify-content: center;
@@ -70,7 +73,7 @@ main {
     border-radius: 5px;
     padding: 15px;
     text-align: center;
-    width: 30%;
+    width: 25%;
     margin-bottom: 20px;
 }
 
@@ -88,42 +91,59 @@ main {
 }
 
 
-
-.login-section {
-    height: 300px;
+aside{
     width: 20%;
-    background-color: #2c3e50;
-    color: white;
+    color: black;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
+    
 }
-.login-section h2 {
-    margin-bottom: 20px;
-}
-.login-section input {
-    width: 80%;
-    padding: 10px;
-    margin: 10px 0;
-    border: none;
-    border-radius: 5px;
-}
-.login-section button {
-    width: 80%;
-    padding: 10px;
-    margin-top: 20px;
-    background-color: #e74c3c;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.login{
+    box-shadow: 1px 1px 1px 1px #ddd;
+    height: 350px;
+
 }
 
+.danhsach{
+    margin-top: 20px;
+    box-shadow: 1px 1px 1px 1px #ddd;
+    background-color: rgb(231, 225, 225);
+}
+
+.sanpham{
+    margin-top: 20px;
+    box-shadow: 1px 1px 1px 1px #ddd;
+}
+.sanpham h3 {
+    background-color: rgb(231, 225, 225);
+
+}
+
+
+.text{
+    color:aqua;
+}
 footer {
-    background-color: #f8f9fa;
-    padding: 10px 0;
-    text-align: center;
+        background: gray;
+        height: 350px;
+        margin-top: 50px;
+}
+      .footer img {
+        width: 100px;
+        height: 100px;
+      }
+      .footer {
+        padding: 70px;
+      }
+      .ft {
+
+        display: flex;
+      }
+      ul {
+        list-style: none;
+      }
+      li {
+        color: white;
+        margin-top: 10px;
 }
 
